<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="14dp"
    android:background="@color/white"
    android:elevation="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/note"

        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/dog_sitting"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="end">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/dog_sitting"
                    android:padding="8dp"
                    android:src="@drawable/ic__edit"
                    app:tint="@color/teal_700" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delete"

                android:layout_gravity="end">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/bottom_sheet_behavior"
                    android:padding="4dp"
                    android:src="@drawable/ic__delete"
                    app:tint="@color/red" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:id="@+id/short_note"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:ellipsize="end"
            android:text="@string/lorem_ipsum">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_date"
            android:id="@+id/date"
            android:textStyle="italic">

        </TextView>
    </LinearLayout>
</androidx.cardview.widget.CardView>